--- a/GameHub.View/App.xaml
+++ b/GameHub.View/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TicTacToe"
-             StartupUri="GUI/MainWindowGUI.xaml">
+             StartupUri="MainWindowGUI.xaml">
     <Application.Resources>
         <ControlTemplate x:Key="NoMouseOverButtonTemplate" 
                  TargetType="Button">
