--- a/GameHub.View/GameGUI.xaml
+++ b/GameHub.View/GameGUI.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="TicTacToe.GUI.GameGUI"
+﻿<Window x:Class="GameHub.View.GameGUI"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TicTacToe"
+        xmlns:local="clr-namespace:GameHub.View"
         mc:Ignorable="d"
         Title="MainWindow" MinHeight="660" MaxHeight="660" MinWidth="450" MaxWidth="450" WindowStartupLocation="CenterScreen">
     <Grid>
