--- a/GameHub.View/MainWindowGUI.xaml
+++ b/GameHub.View/MainWindowGUI.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="TicTacToe.GUI.MainWindow"
+﻿<Window x:Class="GameHub.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TicTacToe.GUI"
+        xmlns:local="clr-namespace:GameHub.View"
         mc:Ignorable="d"
         Title="MainWindow" MinHeight="400" MinWidth="500" MaxHeight="400" MaxWidth="500" WindowStartupLocation="CenterScreen">
     <Window.Resources>
